--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,8 @@ env:
 jobs:
   test:
     runs-on: ubuntu-24.04
+    permissions:
+      contents: read # Grant read access to the repository for cloning and running tests.
     strategy:
       fail-fast: false
       matrix:
@@ -70,6 +72,8 @@ jobs:
 
   lint:
     runs-on: ubuntu-24.04
+    permissions:
+      contents: read # Grant read access to the repository for cloning and linting.
     steps:
     - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
     - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
@@ -91,6 +95,8 @@ jobs:
 
   pre-commit:
     runs-on: ubuntu-24.04
+    permissions:
+      contents: read # Grant read access to the repository for cloning and running pre-commit hooks.
     steps:
     - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
     - uses: j178/prek-action@91fd7d7cf70ae1dee9f4f44e7dfa5d1073fe6623 # v1.0.11
