--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,7 @@ updates:
       semver-patch-days: 3
       semver-minor-days: 7
       semver-major-days: 14
+      default-days: 7
     versioning-strategy: increase-if-necessary
     commit-message:
       prefix: "feat(deps): "
@@ -40,3 +41,5 @@ updates:
       actions:
         patterns:
           - "*"
+    cooldown:
+      default-days: 7
