--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,25 @@ name: Build and publish
 on:
   push:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
+permissions: {}
+
 jobs:
   build:
     name: Build wheel and sdist
     runs-on: ubuntu-24.04
+    permissions:
+      contents: read # Grant read access to the repository for cloning and building.
     outputs:
       package_version: ${{ steps.baipp.outputs.package_version }}
     steps:
     - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       with:
         fetch-depth: 0
+        persist-credentials: false
     - uses: hynek/build-and-inspect-python-package@efb823f52190ad02594531168b7a2d5790e66516 # v2.14.0
       id: baipp
 
@@ -25,8 +34,8 @@ jobs:
       name: pypi
       url: https://pypi.org/project/tap-pingdom/${{ needs.build.outputs.package_version }}
     permissions:
-      contents: write
-      id-token: write
+      contents: read # Grant read access for downloading artifacts and repository metadata.
+      id-token: write # Required for OIDC authentication with PyPI.
 
     steps:
     - uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
