--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,7 @@ jobs:
       contents: read # Grant read access to the repository for cloning and running tests.
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         python-version:
         - "3.14"
