test: Run tests with Singer SDK from git
Signed-off-by: Edgar Ramírez Mondragón <edgarrm358@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,9 @@ source = "vcs"
 [tool.uv]
 required-version = ">=0.8"
 
+[tool.uv.sources]
+singer-sdk = { git = "https://github.com/meltano/sdk.git", rev = "main" }
+
 [tool.ruff]
 line-length = 88
 preview = true
